# NeuralNgen

./: .gitignore  BaseDataset_Fatemh_Arman.py  Basedata_Arman_Fatemeh.py  Debugging.ipynb  README.md  categoriesinformation.txt  config-file.yml  debug.py  gauge_pos_cluster_climate.csv  hourlycamelsus_aorc_Ngen.py  plot.py  pyproject.toml
analysis/: hyd_sig.ipynb
configs/: config.yml
runs/train/: train_data_scaler.yml
src/dataset/: basedataset.py  basedataset_NGEN.py  batch.py  batching.py  camelsus.py  camelsus_NGEN.py  hourlycamelsus.py  hourlycamelsus_NGEN.py
src/datautils/: utils.py
src/neuralngen/: __init__.py
src/neuralngen/dataset/: __init__.py  basedataset.py  batching.py  camelsus.py  collate.py  dailycamelsus.py  hourlycamelsus.py  normalization.py  parallel_load.py
src/neuralngen/models/: README.md  __init__.py  ngenlstm.py
src/neuralngen/training/: __init__.py  basetrainer.py  loss.py  train.py
src/neuralngen/utils/: __init__.py  config.py  distance.py  performance_measures.py  plot_batches.py
src/neuralngen/validate/: __init__.py  epoch_validation.py  validate.py
src/trainig/: README.md
src/utils/: config.py
tests/: test_batch.py  test_batching.py  test_dataset.py
