[project]
name = "ngen_weights"
version = "0.1.0"
description = "A framework for training deep learning and physics-informed learning modules for the Nextgen framework"
authors = [
    {name = "Jonathan M. Frame"},
    {name = "Habtamu Tamiru Dagne"},
    {name = "Fatemeh Yavari"},
    {name = "Mohammad Farmani"},
    {name = "Arman Oliazadeh"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["hydrology", "machine learning", "deep learning", "physics-informed learning", "nextgen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "https://github.com/NWC-CUAHSI-Summer-Institute/ngen_weights"
Repository = "https://github.com/NWC-CUAHSI-Summer-Institute/ngen_weights"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ngen_weights"]
